fix(frontend): calendar issues color fix no-scrollbar

--- a/packages/frontend/src/components/create-campaign/form/rewards-step/reward-tokens-list/styles.module.css
+++ b/packages/frontend/src/components/create-campaign/form/rewards-step/reward-tokens-list/styles.module.css
@@ -1,5 +1,5 @@
 .root {
-    @apply h-96
+    @apply h-64
         w-full
         overflow-hidden;
 }
